# cohere-multimodal-embeddings-example

./: README.md  pyproject.toml  test.py
